# Django-Blog

./: .gitignore  db.sqlite3  notes.md  pyproject.toml  requirements.txt
blog/: models.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  home.html
django_project/: settings.py  urls.py
personal-references/: db-notes.md  notes.md
users/: apps.py  forms.py  models.py  signals.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  logout.html  profile.html  register.html
